red_hat_content/documentation/red_hat_ansible_automation_platform/2.6/install-ref_lightspeed_variables/aem-page/install-ref_lightspeed_variables.md
+++
template = "docs/aem-title.html"
title = "Red Hat Ansible Lightspeed variables - Red Hat Ansible Automation Platform 2.6"
path = "/documentation/en-us/red_hat_ansible_automation_platform/2.6/install-ref_lightspeed_variables"

[extra]
breadcrumbs = [["/", "Home"], ["/products", "Product Documentation"], ["/documentation/en-us/red_hat_ansible_automation_platform/2.7", "Red Hat Ansible Automation Platform"], ["/documentation/en-us/red_hat_ansible_automation_platform/2.6", "2.6"], ["/documentation/en-us/red_hat_ansible_automation_platform/2.6/extend-assembly_deploying_lightspeed_containerized_install/", "Deploy the automation intelligent assistant on containerized Ansible Automation Platform"]]
category = "Extend"
category_description = ""
document_kind = "documentation"
html = "data/docs_assets_aem/red_hat_ansible_automation_platform/2.6/install-ref_lightspeed_variables/aem-page/install-ref_lightspeed_variables.html"
last_crumb = "Red Hat Ansible Lightspeed variables"
modified = "2026-05-21T14:12:12.122Z"
multi_page_path = ""
name = "Red Hat Ansible Lightspeed variables"
oversized = "false"
page_slug = "install-ref_lightspeed_variables"
portal_content_subtype = "title"
product = "Red Hat Ansible Automation Platform"
product_slug = "red_hat_ansible_automation_platform"
product_version = "2.6"
reference_url = "https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.6/install-ref_lightspeed_variables"
solr_index = "true"
toc = "data/docs_assets_aem/red_hat_ansible_automation_platform/2.6/install-ref_lightspeed_variables/toc/toc.json"
type = "aem-page"
+++

# Red Hat Ansible Lightspeed variables

Configure Red Hat Ansible Lightspeed by setting inventory file variables during installation. Use this reference to determine which variables to set for your deployment requirements.

## Red Hat Ansible Lightspeed variables

Inventory file variables for Red Hat Ansible Lightspeed.

| RPM variable name | Container variable name                      | Description                                                                                                                                                                                                                                        | Required or optional | Default                   |
| ----------------- | -------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------- | ------------------------- |
| <br>N/A           | <br> `lightspeed_admin_password`             | <br>Red Hat Ansible Lightspeed administrator password. Use of special characters for this variable is limited. The password can include any printable ASCII character except `/`, `"`, or `@`.                                                     | <br>Required         |                           |
| <br>N/A           | <br> `lightspeed_admin_user`                 | <br>Username used to identify and create the Red Hat Ansible Lightspeed admin user.                                                                                                                                                                | <br>Optional         | <br> `admin`              |
| <br>N/A           | <br> `lightspeed_chat_rate_throttle`         | <br>Chat rate throttle.                                                                                                                                                                                                                            | <br>Optional         | <br> `10/minute`          |
| <br>N/A           | <br> `lightspeed_nginx_client_max_body_size` | <br>Maximum allowed size for data sent to Red Hat Ansible Lightspeed through NGINX.                                                                                                                                                                | <br>Optional         | <br> `5m`                 |
| <br>N/A           | <br> `lightspeed_nginx_disable_hsts`         | <br>Controls whether HTTP Strict Transport Security (HSTS) is enabled or disabled for Red Hat Ansible Lightspeed. Set this variable to `true` to disable HSTS.                                                                                     | <br>Optional         | <br> `false`              |
| <br>N/A           | <br> `lightspeed_nginx_disable_https`        | <br>Controls whether HTTPS is enabled or disabled for Red Hat Ansible Lightspeed. Set this variable to `true` to disable HTTPS.                                                                                                                    | <br>Optional         | <br> `false`              |
| <br>N/A           | <br> `lightspeed_nginx_hsts_max_age`         | <br>Maximum duration (in seconds) that HTTP Strict Transport Security (HSTS) is enforced for Red Hat Ansible Lightspeed.                                                                                                                           | <br>Optional         | <br> `63072000`           |
| <br>N/A           | <br> `lightspeed_nginx_http_port`            | <br>Port number that Red Hat Ansible Lightspeed listens on for HTTP requests.                                                                                                                                                                      | <br>Optional         | <br> `8084`               |
| <br>N/A           | <br> `lightspeed_nginx_https_port`           | <br>Port number that Red Hat Ansible Lightspeed listens on for HTTPS requests.                                                                                                                                                                     | <br>Optional         | <br> `8447`               |
| <br>N/A           | <br> `lightspeed_nginx_https_protocols`      | <br>Protocols that Red Hat Ansible Lightspeed will support when handling HTTPS traffic.                                                                                                                                                            | <br>Optional         | <br> `[TLSv1.2, TLSv1.3]` |
| <br>N/A           | <br> `lightspeed_nginx_user_headers`         | <br>Custom Nginx headers. List of additional NGINX headers to add to Red Hat Ansible Lightspeed’s NGINX configuration.                                                                                                                             | <br>Optional         | <br>[]                    |
| <br>N/A           | <br> `lightspeed_nginx_read_timeout`         | <br>Sets the HTTP timeout for end-user requests. The minimum value is `10` seconds.                                                                                                                                                                | <br>Optional         | <br> `3600`               |
| <br>N/A           | <br> `lightspeed_pg_cert_auth`               | <br>Controls whether client certificate authentication is enabled or disabled on the Red Hat Ansible Lightspeed PostgreSQL database. Set this variable to `true` to enable client certificate authentication.                                      | <br>Optional         | <br> `false`              |
| <br>N/A           | <br> `lightspeed_pg_database`                | <br>Name of the PostgreSQL database used by Red Hat Ansible Lightspeed.                                                                                                                                                                            | <br>Optional         | <br> `lightspeed`         |
| <br>N/A           | <br> `lightspeed_pg_host`                    | <br>Hostname of the PostgreSQL database used by Red Hat Ansible Lightspeed.                                                                                                                                                                        | <br>Required         |                           |
| <br>N/A           | <br> `lightspeed_pg_password`                | <br>Password for the Red Hat Ansible Lightspeed PostgreSQL database user. Use of special characters for this variable is limited. The `!`, `#`, `0` and `@` characters are supported. Use of other special characters can cause the setup to fail. | <br>Optional         |                           |
| <br>N/A           | <br> `lightspeed_pg_port`                    | <br>Port number for the PostgreSQL database used by Red Hat Ansible Lightspeed.                                                                                                                                                                    | <br>Optional         | <br> `5432`               |
| <br>N/A           | <br> `lightspeed_pg_sslmode`                 | <br>Controls the SSL mode to use when platform gateway connects to the PostgreSQL database. Valid options include `verify-full`, `verify-ca`, `require`, `prefer`, `allow`, `disable`.                                                             | <br>Optional         | <br> `prefer`             |
| <br>N/A           | <br> `lightspeed_pg_tls_cert`                | <br>Path to the PostgreSQL SSL/TLS certificate file for Red Hat Ansible Lightspeed.                                                                                                                                                                | <br>Optional         |                           |
| <br>N/A           | <br> `lightspeed_pg_tls_key`                 | <br>Path to the PostgreSQL SSL/TLS key file for Red Hat Ansible Lightspeed.                                                                                                                                                                        | <br>Optional         |                           |
| <br>N/A           | <br> `lightspeed_pg_username`                | <br>Username for the Red Hat Ansible Lightspeed PostgreSQL database user.                                                                                                                                                                          | <br>Optional         | <br> `lightspeed`         |
| <br>N/A           | <br> `lightspeed_secret_key`                 | <br>Secret key value used by Red Hat Ansible Lightspeed to sign and encrypt data.                                                                                                                                                                  | <br>Optional         |                           |
| <br>N/A           | <br> `lightspeed_tls_cert`                   | <br>Path to the SSL/TLS certificate file for Red Hat Ansible Lightspeed.                                                                                                                                                                           | <br>Optional         |                           |
| <br>N/A           | <br> `lightspeed_tls_key`                    | <br>Path to the SSL/TLS key file for Red Hat Ansible Lightspeed.                                                                                                                                                                                   | <br>Optional         |                           |
| <br>N/A           | <br> `lightspeed_tls_remote`                 | <br>Denote whether the Red Hat Ansible Lightspeed provided certificate files are local to the installation program (`false`) or on the remote component server (`true`).                                                                           | <br>Optional         | <br> `false`              |
| <br>N/A           | <br> `lightspeed_use_archive_compression`    | <br>Controls whether archive compression is enabled or disabled for Red Hat Ansible Lightspeed. You can control this functionality globally by using `use_archive_compression`.                                                                    | <br>Optional         | <br> `true`               |
| <br>N/A           | <br> `lightspeed_use_db_compression`         | <br>Controls whether database compression is enabled or disabled for Red Hat Ansible Lightspeed. You can control this functionality globally by using `use_db_compression`.                                                                        | <br>Optional         | <br> `false`              |

## Coding assistant variables

Inventory file variables for the coding assistant.

| RPM variable name | Container variable name                          | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | Required or optional | Default     |
| ----------------- | ------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------- | ----------- |
| <br>N/A           | <br> `lightspeed_wca_model_type`                 | <br>IBM watsonx Code Assistant model deployment mode, cloud (`wca`) or on-premise (`wca-onprem`).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | <br>Optional         | <br> `wca`  |
| <br>N/A           | <br> `lightspeed_wca_model_url`                  | <br>URL of the IBM watsonx Code Assistant model. For cloud deployment, the URL could be `https://api.dataplatform.test.cloud.ibm.com`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | <br>Optional         |             |
| <br>N/A           | <br> `lightspeed_wca_model_api_key`              | <br>API key of the IBM watsonx Code Assistant model that was generated during the model installation.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | <br>Required         |             |
| <br>N/A           | <br> `lightspeed_wca_model_id`                   | <br>ID of the IBM watsonx Code Assistant model.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | <br>Optional         |             |
| <br>N/A           | <br> `lightspeed_wca_model_verify_ssl`           | <br>Denotes whether or not to verify IBM watsonx Code Assistant’s web certificates when making calls from Red Hat Ansible Lightspeed to itself during installation. Set to `false` to disable web certificate verification.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | <br>Optional         | <br> `true` |
| <br>N/A           | <br> `lightspeed_wca_model_enable_anonymization` | <br>Controls whether the anonymization of Personally Identifiable Information (PII) is enabled. PII information includes passwords, IP addresses, email addresses, and other sensitive data.<br>When PII anonymization is enabled, users' personal information is modified to some generic values to protect their data and reduce the risk of data leaks.<br>You can turn off the anonymization by specifying the value as `false` if you want to retain all original information as entered by users and improve the quality of the answers.<br>If you set the value to `false` and the Ansible administrator is using Red Hat Ansible Lightspeed in hybrid mode (where the model is in IBM watsonx Code Assistant in IBM Cloud) then their users' PII is sent to IBM Cloud. | <br>Optional         | <br> `true` |
| <br>N/A           | <br> `lightspeed_wca_model_username`             | <br>For on-premise deployment only. The username you use to connect to an IBM Cloud Pak for Data deployment.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | <br>Optional         |             |
| <br>N/A           | <br> `lightspeed_wca_health_check`               | <br>Enables or disables IBM watsonx Code Assistant health check.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | <br>Optional         | <br> `true` |
| <br>N/A           | <br> `lightspeed_wca_idp_url`                    | <br>For cloud deployment only. The IBM watsonx Code Assistant Identity Provider (IdP) URL.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | <br>Optional         |             |
| <br>N/A           | <br> `lightspeed_wca_idp_login`                  | <br>For cloud deployment only. The IBM watsonx Code Assistant Identity Provider (IdP) username.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | <br>Optional         |             |
| <br>N/A           | <br> `lightspeed_wca_idp_password`               | <br>For cloud deployment only. The IBM watsonx Code Assistant Identity Provider (IdP) password.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | <br>Optional         |             |

## Automation intelligent assistant variables

Inventory file variables for the intelligent assistant.

| RPM variable name | Container variable name                        | Description                                                                                                                                                                                                                                                                  | Required or optional | Default      |
| ----------------- | ---------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------- | ------------ |
| <br>N/A           | <br> `lightspeed_chatbot_model_url`            | <br>The inference API base URL on your LLM setup. For example, `https://your_inference_api/v1`.If you are using Microsoft Azure OpenAI, then set the base URL to `https://your_inference_api/openai/v1`.                                                                     | <br>Optional         |              |
| <br>N/A           | <br> `lightspeed_chatbot_model_verify_ssl`     | <br>Controls whether SSL/TLS certificate verification is enabled or disabled when making HTTPS requests.                                                                                                                                                                     | <br>Optional         | <br> `true`  |
| <br>N/A           | <br> `lightspeed_chatbot_default_provider`     | <br>The provider type of your LLM setup by using one of the following values:<br>Red Hat Enterprise Linux AI: `rhelai`Red Hat OpenShift AI: `rhoai`OpenAI: `openai`Microsoft Azure OpenAI: `azure`                                                                           | <br>Optional         | <br> `rhoai` |
| <br>N/A           | <br> `lightspeed_chatbot_model_extra_settings` | <br>Use this parameter to pass a JSON dictionary of extra parameters to pass directly to the model provider, for settings not covered by other standard fields.<br>If you want to use Microsoft Azure OpenAI as the LLM provider, specify the value as `'{"api_type": ""}'`. | <br>Optional         | <br> `{}`    |
| N/A               | `lightspeed_chatbot_agent_extra_settings`      | Use this parameter to customize agent behavior, such as controlling the temperature of the LLM. For example,<br>`'{"chatbot_temperature_override": 1}'`.                                                                                                                     | Optional             | `{}`         |
| <br>N/A           | <br> `lightspeed_chatbot_chatbot_max_tokens`   | <br>Maximum number of tokens to generate a chat response.                                                                                                                                                                                                                    | <br>Optional         | <br> `4096`  |
| <br>N/A           | <br> `lightspeed_chatbot_http_port`            | <br>Port number that Ansible Lightspeed intelligent assistant listens on for HTTP requests.                                                                                                                                                                                  | <br>Optional         | <br> `8085`  |
| <br>N/A           | <br> `lightspeed_chatbot_model_id`             | <br>The ID of the LLM model that is configured on your LLM setup.                                                                                                                                                                                                            | <br>Optional         |              |
| <br>N/A           | <br> `lightspeed_chatbot_model_api_key`        | <br>The API token or the API key of your LLM setup. This token is sent along with the authorization header when an inference API is called.                                                                                                                                  | <br>Optional         |              |

## Automation intelligent assistant integration with MCP server variables

Inventory file variables for automation intelligent assistant integration with the Model Context Protocol (MCP) server for Red Hat Ansible Automation Platform.

| RPM variable name | Container variable name                  | Description                                                                        | Required or optional | Default      |
| ----------------- | ---------------------------------------- | ---------------------------------------------------------------------------------- | -------------------- | ------------ |
| <br>N/A           | <br> `lightspeed_mcp_controller_enabled` | <br>Controls whether the Ansible Lightspeed MCP controller is enabled or disabled. | <br>Optional         | <br> `false` |
| <br>N/A           | <br> `lightspeed_mcp_controller_port`    | <br>Ansible Lightspeed MCP controller port.                                        | <br>Optional         | <br> `8004`  |
| <br>N/A           | <br> `lightspeed_mcp_lightspeed_enabled` | <br>Ansible Lightspeed MCP lightspeed enabled.                                     | <br>Optional         | <br> `false` |
| <br>N/A           | <br> `lightspeed_mcp_lightspeed_port`    | <br>Ansible Lightspeed MCP lightspeed port.                                        | <br>Optional         | <br> `8005`  |
